--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,6 @@ charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = false
 
-[*.{js,json}]
+[*.{js,json.yml}]
 indent_style = space
 indent_size = 2
