--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "homepage": "https://github.com/limbuster/generator-koajs#readme",
   "dependencies": {
     "inquirer-npm-name": "^3.0.0",
-    "jest": "^23.6.0",
     "koa": "^2.5.3",
+    "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
     "yeoman-generator": "^3.1.1"
   },
@@ -33,6 +33,10 @@
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "generator-jest": "^1.6.0",
+    "jest": "^23.6.0",
+    "supertest": "^3.3.0",
+    "yeoman-assert": "^3.1.1",
     "yeoman-test": "^1.9.1"
   }
 }
